[package]
name = "backuppit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
clap = { version = "3.1.8", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
base64 = "0.13.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"